[project]
name = "pymvt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bas-58", email = "swcolwell24@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pymvt = "pymvt:run_pymvt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
