[project]
name = "pymvt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bas-58", email = "swcolwell24@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "filesdk",
    "pytest>=8.3.4",
]

[project.scripts]
pymvt = "pymvt:run_pymvt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
filesdk = { path = "bin/FileSDK-2024.7.1-cp313-cp313-win_amd64.whl" }
